--- a/res/layout/status.xml
+++ b/res/layout/status.xml
@@ -3,9 +3,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="@drawable/background"
     android:orientation="vertical" >
 
-    <!-- Title TextView -->
+    <!-- Title TextView Content -->
 
     <TextView
         android:layout_width="fill_parent"
@@ -13,14 +14,26 @@
         android:layout_margin="10dp"
         android:gravity="center"
         android:text="@string/titleStatus"
-        android:textSize="30sp" />
+        android:textColor="@android:color/white"
+        android:textSize="25sp" />
+
+    <TextView
+        android:id="@+id/textCount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:layout_marginRight="10dp"
+        android:text="@string/zero" />
     <!-- Status EditText -->
 
     <EditText
         android:id="@+id/editText"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:layout_margin="10dp"
         android:layout_weight="1"
+        android:background="#cfff"
+        android:textColor="@android:color/black"
         android:gravity="top|center_horizontal"
         android:hint="@string/hintText" >
     </EditText>
@@ -30,7 +43,11 @@
         android:id="@+id/buttonUpdate"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:text="@string/buttonUpdate"
+        android:textColor="@android:color/white"
         android:textSize="20sp" >
     </Button>
 
