--- a/res/layout/row.xml
+++ b/res/layout/row.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:overScrollMode="ifContentScrolls"
-    android:padding="5dp" >
+    android:padding="4dp" >
 
     <!--  -->
 
@@ -13,37 +13,55 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" >
 
-        <!--  -->
-
         <TextView
             android:id="@+id/textUser"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Slashdot"
-            android:textSize="16sp"
+            android:padding="2dp"
+            android:text="用户名 "
+            android:textColor="#333"
+            android:textSize="18sp"
             android:textStyle="bold" />
+    </LinearLayout>
 
-        <!--  -->
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" >
 
         <TextView
-            android:id="@+id/textCreatedAt"
+            android:id="@+id/textText"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:padding="4dp"
+            android:text="内容"
+            android:textColor="#333"
+            android:textSize="14sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:id="@+id/textSource"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="right"
-            android:text="10 minutes ago"
+            android:padding="2dp"
+            android:text="新浪微博"
+            android:textColor="#333"
             android:textSize="10sp" />
 
+        <TextView
+            android:id="@+id/textCreatedAt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="right"
+            android:padding="2dp"
+            android:text="10 minutes ago"
+            android:textColor="#333"
+            android:textSize="10sp" />
     </LinearLayout>
-    <!--  -->
-
-    <TextView
-        android:id="@+id/textText"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:text="Firefox comes to Android"
-        android:textSize="12sp" />
 
 </LinearLayout>
