--- a/res/layout/timeline.xml
+++ b/res/layout/timeline.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/timeline_bg"
     android:orientation="vertical" >
 
     <TextView
@@ -19,6 +19,7 @@
         android:id="@+id/listTimeline"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="#6000" />
+        android:layout_margin="4dp"
+        android:background="#cfff" />
 
 </LinearLayout>
